crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__starttag_containing_lt.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"<a<b>\"#)"
---
[
    Token {
        data: "a<b",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "a<b",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
