crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__unescaped_lt.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"</\"####)"
---
[
    Token {
        data: "</",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
