crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__unescaped_lt1.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r#\"foo < bar\"#)"
---
[
    Token {
        data: "foo ",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
    Token {
        data: "< bar",
        attrs: None,
        kind: Text,
        is_implied: false,
    },
]
