crates/rs_html_parser/tests/snapshots/html5lib_test2_test__tests__void_element_with_permitted_slash.snap
---
source: crates/rs_html_parser/tests/html5lib_test2_test.rs
expression: "parser_test(r####\"<br/>\"####)"
---
[
    Token {
        data: "br",
        attrs: None,
        kind: OpenTag,
        is_implied: false,
    },
    Token {
        data: "br",
        attrs: None,
        kind: CloseTag,
        is_implied: true,
    },
]
